--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/sign-logo.svg" />
+    <link rel="apple-touch-icon" href="/sign-logo-192.png" />
+    <link rel="mask-icon" href="/sign-logo.svg" color="#FF6B00" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sign-community-hub-connect</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Sign Community Hub - Building the Future Together" />
+    <meta name="author" content="Sign Community" />
 
-    <meta property="og:title" content="sign-community-hub-connect" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Sign Community Hub" />
+    <meta property="og:description" content="Building the Future Together" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://sign.community/opengraph-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@sign" />
+    <meta name="twitter:image" content="https://sign.community/opengraph-image.png" />
   </head>
 
   <body>
